Cherry-pick 311363@main (427b518060e9). https://bugs.webkit.org/show_bug.cgi?id=312457

[WTF][GLib] Clang 22 produces -Wunsafe-buffer-usage-in-format-attr-call warning spam in journald logging code
    https://bugs.webkit.org/show_bug.cgi?id=312457

    Reviewed by Claudio Saavedra.

    Sprinkle WTF_IGNORE_WARNINGS_BEGIN in the journald logging code to
    avoid the compiler warnings.

    * Source/WTF/wtf/Assertions.h:

    Canonical link: https://commits.webkit.org/311363@main

Canonical link: https://commits.webkit.org/305877.440@webkitglib/2.52